--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#Group icon">Group icon</a></li>
-            <li><a href="#Things to do">Things to do</a></li>
+            <li><a href="#Group_icon">Group icon</a></li>
+            <li><a href="#Things_to_do">Things to do</a></li>
             <li><a href="#Update">Update</a></li>
             <li><a href="#attendance">Attendance</a></li>
             <li><a href="#Comment">Comment</a></li>
@@ -24,29 +24,27 @@
     </nav>
     <hr>
 
-    <section id='Group icon'>
+    <section id='Group_icon'>
         <h2>Group icon</h2>
-        <img src="icon.jpg" alt="Archiecture diagram" width='500'>
-
+        <img src="icon.jpg" alt="Architecture diagram" width='500'>
     </section>
 
-    <section id='Things to do'>
+    <section id='Things_to_do'>
         <h2>Things to do</h2>
         <ol>
-            <li><span>Intruduction</span></li>
+            <li><span>Introduction</span></li>
             <li>Ice breaker</li>
         </ol>
     </section>
 
     <section id='Update'>
-        <h2> Update</h2>
+        <h2>Update</h2>
         <form>
             <div>
-                <label for="Update">Update:</label>
-                <input type="text" id="Update" name="Update stuff" placeholder="Update stuff">
+                <label for="Updates">Update:</label>
+                <input type="text" id="Updates" name="Update stuff" placeholder="Update stuff">
             </div>
         </form>
-
     </section>
 
     <section>
@@ -73,11 +71,10 @@
         </ul>
     </section>
 
-
     <section>
-        <h3>Not finish yet: </h3>
+        <h2>Not finished yet:</h2>
         <ul>
-            Meeting date: <span style='color: blue;'>unknown</span> -> unkown.
+            <li>Meeting date: <span style='color: blue;'>unknown</span> -> unknown.</li>
         </ul>
     </section>
 
@@ -162,19 +159,13 @@
             </article>
             <article>
                 <h3>Previous Video Recording</h3>
-                <video width="auto" height="400px" autoplay="" loop="" muted="">
+                <video width="100%" height="400" autoplay loop muted>
                     <source src="video.mp4" type="video/mp4">
                     <source src="video.ogg" type="video/ogg">
                 </video>
             </article>
         </section>
-        <main>
-            example video
-        </main>
-        <footer>
-            <p>By: Wen Hsin Chang</p>
-
-        </footer>
+    </section>
 </body>
 
 </html>
