--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id='Group_icon'>
         <h2>Group icon</h2>
-        <img src="icon.jpg" alt="Architecture diagram" width='500'>
+        <img src="icon.jpg" alt="pic" width='500'>
     </section>
 
     <section id='Things_to_do'>
@@ -80,92 +80,94 @@
 
     <section id='Comment'>
         <h2> Comment:</h2>
-        <form>
-            <fieldset>
-                <div>
-                    <label for="Name">Choose your name:</label>
-                    <select id="name" name="name">
-                        <option value="Vincent">Vincent</option>
-                        <option value="Lindsey">Lindsey</option>
-                        <option value="Ritviksiddha">Ritviksiddha</option>
-                        <option value="Eban">Eban</option>
-                        <option value="Guan">Guan</option>
-                        <option value="Ibraheem">Ibraheem</option>
-                        <option value="Sidhant">Sidhant</option>
-                        <option value="Jordan">Jordan</option>
-                        <option value="Matthew">Matthew</option>
-                        <option value="Sophia">Sophia</option>
-                    </select>
-
-                </div>
-                <br>
-
-                <div>
-                    <label for="purpose">Purpose:</label>
-                    <input list="purposes" id="purpose" name="purpose">
-                    <datalist id="purposes">
-                        <option value="update">
-                        <option value="failed for sth">
-                        <option value="other">
-                    </datalist>
-
-                </div>
-
-                <br>
-                <div>
-                    <label for="Title">Enter title:</label>
-                    <input type="text" id="Title" name="title" placeholder="title">
-                </div>
-
-                <br>
-
-                <div>
-                    <label for="Content">Content:</label>
-                    <textarea id="Content" name="Content" rows="4" cols="20">
-            </textarea>
-
-                </div>
-
-                <br>
-
-                <div>
-                    <label for="meeting">Request for meeting</label>
-                    <input type="checkbox" name="check" id="meeting">
-                </div>
-
-                <br>
-
-                <div>
-                    <label for="date">Date:</label>
-                    <input type="date" name="date" id="date">
-                </div>
-                <button>Submit</button>
-            </fieldset>
-        </form>
-
         <section>
             <details>
                 <summary>Previous comment</summary>
                 <p>XXXXXXXXXXXXXX</p>
             </details>
+            <form>
+                <fieldset>
+                    <div>
+                        <label for="Name">Choose your name:</label>
+                        <select id="name" name="name">
+                            <option value="Vincent">Vincent</option>
+                            <option value="Lindsey">Lindsey</option>
+                            <option value="Ritviksiddha">Ritviksiddha</option>
+                            <option value="Eban">Eban</option>
+                            <option value="Guan">Guan</option>
+                            <option value="Ibraheem">Ibraheem</option>
+                            <option value="Sidhant">Sidhant</option>
+                            <option value="Jordan">Jordan</option>
+                            <option value="Matthew">Matthew</option>
+                            <option value="Sophia">Sophia</option>
+                        </select>
+
+                    </div>
+                    <br>
+
+                    <div>
+                        <label for="purpose">Purpose:</label>
+                        <input list="purposes" id="purpose" name="purpose">
+                        <datalist id="purposes">
+                            <option value="update">
+                            <option value="failed for sth">
+                            <option value="other">
+                        </datalist>
+
+                    </div>
+
+                    <br>
+                    <div>
+                        <label for="Title">Enter title:</label>
+                        <input type="text" id="Title" name="title" placeholder="title">
+                    </div>
+
+                    <br>
+
+                    <div>
+                        <label for="Content">Content:</label>
+                        <textarea id="Content" name="Content" rows="4" cols="20">
+            </textarea>
+
+                    </div>
+
+                    <br>
+
+                    <div>
+                        <label for="meeting">Request for meeting</label>
+                        <input type="checkbox" name="check" id="meeting">
+                    </div>
+
+                    <br>
+
+                    <div>
+                        <label for="date">Date:</label>
+                        <input type="date" name="date" id="date">
+                    </div>
+                    <button>Submit</button>
+                </fieldset>
+            </form>
+            <section>
+                <h2>Previous Meeting Recordings</h2>
+                <article>
+                    <h3>Previous Audio Recording</h3>
+                    <audio controls>
+                        <source src="audio.m4a" type="audio/mpeg">
+                    </audio>
+                </article>
+                <article>
+                    <h3>Previous Video Recording</h3>
+                    <video width="100%" height="400" autoplay loop muted>
+                        <source src="video.mp4" type="video/mp4">
+                        <source src="video.ogg" type="video/ogg">
+                    </video>
+                </article>
+            </section>
         </section>
-        <section>
-            <h2>Previous Meeting Recordings</h2>
-            <article>
-                <h3>Previous Audio Recording</h3>
-                <audio controls>
-                    <source src="audio.m4a" type="audio/mpeg">
-                </audio>
-            </article>
-            <article>
-                <h3>Previous Video Recording</h3>
-                <video width="100%" height="400" autoplay loop muted>
-                    <source src="video.mp4" type="video/mp4">
-                    <source src="video.ogg" type="video/ogg">
-                </video>
-            </article>
-        </section>
-    </section>
+        </main>
+        <footer>
+            <p>By Wen Hsin Chang.</p>
+        </footer>
 </body>
 
 </html>
