--- a/index.html
+++ b/index.html
@@ -28,98 +28,100 @@
         </ul>
     </nav>
     <hr>
-    <section id='Group_icon'>
-        <h2>Group icon</h2>
-        <img src="icon.jpg" alt="pic" width='500'>
-    </section>
-    <section id='Things_to_do'>
-        <h2>Things to do</h2>
-        <ol>
-            <li><span>Introduction</span></li>
-            <li>Ice breaker</li>
-        </ol>
-    </section>
-    <section id='Update'>
-        <h2>Update</h2>
-        <form>
-            <div>
-                <label for="Updates">Update:</label>
-                <input type="text" id="Updates" name="Update stuff" placeholder="Update stuff">
-            </div>
-        </form>
-    </section>
-    <section id='attendance'>
-        <h2>Meeting attendance</h2>
-        <ul>
-            <li><input type="checkbox"><strong>Vincent</strong></li>
-            <li><input type="checkbox"><i>Lindsey</i></li>
-            <li><input type="checkbox"><em>Ritviksiddha</em></li>
-            <li><input type="checkbox"><em>Eban</em></li>
-            <li><input type="checkbox"><em>Guan</em></li>
-            <li><input type="checkbox"><em>Ibraheem</em></li>
-            <li><input type="checkbox"><em>Sidhant</em></li>
-            <li><input type="checkbox"><em>Jordan</em></li>
-            <li><input type="checkbox"><em>Matthew</em></li>
-            <li><input type="checkbox"><em>Sophia</em></li>
-        </ul>
-    </section>
-    <section id='Comment'>
-        <h2> Comment:</h2>
-        <details>
-            <summary>Previous comment</summary>
-            <p>XXXXXXXXXXXXXX</p>
-        </details>
-        <form>
-            <fieldset>
+    <main>
+        <section id='Group_icon'>
+            <h2>Group icon</h2>
+            <img src="icon.jpg" alt="pic" width='500'>
+        </section>
+        <section id='Things_to_do'>
+            <h2>Things to do</h2>
+            <ol>
+                <li><span>Introduction</span></li>
+                <li>Ice breaker</li>
+            </ol>
+        </section>
+        <section id='Update'>
+            <h2>Update</h2>
+            <form>
                 <div>
-                    <label for="name">Choose your name:</label>
-                    <select id="name" name="name">
-                        <option value="Vincent">Vincent</option>
-                        <option value="Lindsey">Lindsey</option>
-                        <option value="Ritviksiddha">Ritviksiddha</option>
-                        <option value="Eban">Eban</option>
-                        <option value="Guan">Guan</option>
-                        <option value="Ibraheem">Ibraheem</option>
-                        <option value="Sidhant">Sidhant</option>
-                        <option value="Jordan">Jordan</option>
-                        <option value="Matthew">Matthew</option>
-                        <option value="Sophia">Sophia</option>
-                    </select>
+                    <label for="Updates">Update:</label>
+                    <input type="text" id="Updates" name="Update stuff" placeholder="Update stuff">
                 </div>
-                <br>
-                <div>
-                    <label for="purpose">Purpose:</label>
-                    <input list="purposes" id="purpose" name="purpose">
-                    <datalist id="purposes">
-                        <option value="update">
-                        <option value="failed for sth">
-                        <option value="other">
-                    </datalist>
-                </div>
-                <br>
-                <div>
-                    <label for="Title">Enter title:</label>
-                    <input type="text" id="Title" name="title" placeholder="title">
-                </div>
-                <br>
-                <div>
-                    <label for="Content">Content:</label>
-                    <textarea id="Content" name="Content" rows="4" cols="20"></textarea>
-                </div>
-                <br>
-                <div>
-                    <label for="meeting">Request for meeting</label>
-                    <input type="checkbox" name="check" id="meeting">
-                </div>
-                <br>
-                <div>
-                    <label for="date">Date:</label>
-                    <input type="date" name="date" id="date">
-                </div>
-                <button>Submit</button>
-            </fieldset>
-        </form>
-    </section>
+            </form>
+        </section>
+        <section id='attendance'>
+            <h2>Meeting attendance</h2>
+            <ul>
+                <li><input type="checkbox"><strong>Vincent</strong></li>
+                <li><input type="checkbox"><i>Lindsey</i></li>
+                <li><input type="checkbox"><em>Ritviksiddha</em></li>
+                <li><input type="checkbox"><em>Eban</em></li>
+                <li><input type="checkbox"><em>Guan</em></li>
+                <li><input type="checkbox"><em>Ibraheem</em></li>
+                <li><input type="checkbox"><em>Sidhant</em></li>
+                <li><input type="checkbox"><em>Jordan</em></li>
+                <li><input type="checkbox"><em>Matthew</em></li>
+                <li><input type="checkbox"><em>Sophia</em></li>
+            </ul>
+        </section>
+        <section id='Comment'>
+            <h2> Comment:</h2>
+            <details>
+                <summary>Previous comment</summary>
+                <p>XXXXXXXXXXXXXX</p>
+            </details>
+            <form>
+                <fieldset>
+                    <div>
+                        <label for="name">Choose your name:</label>
+                        <select id="name" name="name">
+                            <option value="Vincent">Vincent</option>
+                            <option value="Lindsey">Lindsey</option>
+                            <option value="Ritviksiddha">Ritviksiddha</option>
+                            <option value="Eban">Eban</option>
+                            <option value="Guan">Guan</option>
+                            <option value="Ibraheem">Ibraheem</option>
+                            <option value="Sidhant">Sidhant</option>
+                            <option value="Jordan">Jordan</option>
+                            <option value="Matthew">Matthew</option>
+                            <option value="Sophia">Sophia</option>
+                        </select>
+                    </div>
+                    <br>
+                    <div>
+                        <label for="purpose">Purpose:</label>
+                        <input list="purposes" id="purpose" name="purpose">
+                        <datalist id="purposes">
+                            <option value="update">
+                            <option value="failed for sth">
+                            <option value="other">
+                        </datalist>
+                    </div>
+                    <br>
+                    <div>
+                        <label for="Title">Enter title:</label>
+                        <input type="text" id="Title" name="title" placeholder="title">
+                    </div>
+                    <br>
+                    <div>
+                        <label for="Content">Content:</label>
+                        <textarea id="Content" name="Content" rows="4" cols="20"></textarea>
+                    </div>
+                    <br>
+                    <div>
+                        <label for="meeting">Request for meeting</label>
+                        <input type="checkbox" name="check" id="meeting">
+                    </div>
+                    <br>
+                    <div>
+                        <label for="date">Date:</label>
+                        <input type of="date" name="date" id="date">
+                    </div>
+                    <button>Submit</button>
+                </fieldset>
+            </form>
+        </section>
+    </main>
     <footer>
         <p>By Wen Hsin Chang.</p>
     </footer>
