--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                     </div>
                     <br>
                     <div>
-                        <label for="date1">Date:</label>
-                        <input type of="date1" name="date1" id="date1">
+                        <label for="date">Date:</label>
+                        <input type="date" name="date" id="date">
                     </div>
                     <button>Submit</button>
                 </fieldset>
