--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <nav>
         <ul>
             <li><a href="#Group_icon">Group icon</a></li>
+            <li><a href="#video">Video and audio</a></li>
             <li><a href="#Things_to_do">Things to do</a></li>
             <li><a href="#Update">Update</a></li>
             <li><a href="#attendance">Attendance</a></li>
@@ -32,6 +33,22 @@
         <section id='Group_icon'>
             <h2>Group icon</h2>
             <img src="icon.jpg" alt="pic" width='500'>
+        </section>
+        <section id='video'>
+            <h2>Video and Audio</h2>
+            <article>
+                <h3>Previous Audio Recording</h3>
+                <audio controls>
+                    <source src="audio.m4a" type="audio/mpeg">
+                </audio>
+            </article>
+            <article>
+                <h3>Previous Video Recording</h3>
+                <video width="100%" height="400" autoplay loop muted>
+                    <source src="video.mp4" type="video/mp4">
+                    <source src="video.ogg" type="video/ogg">
+                </video>
+            </article>
         </section>
         <section id='Things_to_do'>
             <h2>Things to do</h2>
@@ -55,12 +72,12 @@
                 <li><input type="checkbox"><strong>Vincent</strong></li>
                 <li><input type="checkbox"><i>Lindsey</i></li>
                 <li><input type="checkbox"><em>Ritviksiddha</em></li>
-                <li><input type="checkbox"><em>Eban</em></li>
-                <li><input type="checkbox"><em>Guan</em></li>
+                <li><input type="checkbox"><a>Eban</em></li>
+                <li><input type="checkbox"><i>Guan</em></li>
                 <li><input type="checkbox"><em>Ibraheem</em></li>
-                <li><input type="checkbox"><em>Sidhant</em></li>
+                <li><input type="checkbox"><i>Sidhant</em></li>
                 <li><input type="checkbox"><em>Jordan</em></li>
-                <li><input type="checkbox"><em>Matthew</em></li>
+                <li><input type="checkbox"><i>Matthew</em></li>
                 <li><input type="checkbox"><em>Sophia</em></li>
             </ul>
         </section>
@@ -122,6 +139,7 @@
             </form>
         </section>
     </main>
+    <hr>
     <footer>
         <p>By Wen Hsin Chang.</p>
     </footer>
