--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <header>
         <h1><b>Infinite loop</b></h1>
+        <h2><a href="https://en.wikipedia.org/wiki/Infinite_loop">Infinite loop</a></h2>
         <h3><strong>Making Date: April 16th, 2024</strong></h3>
     </header>
     <nav>
@@ -44,7 +45,7 @@
             </article>
             <article>
                 <h3>Previous Video Recording</h3>
-                <video width="100%" height="400" autoplay loop muted>
+                <video width="100%\" height="400" autoplay loop muted>
                     <source src="video.mp4" type="video/mp4">
                     <source src="video.ogg" type="video/ogg">
                 </video>
@@ -72,12 +73,12 @@
                 <li><input type="checkbox"><strong>Vincent</strong></li>
                 <li><input type="checkbox"><i>Lindsey</i></li>
                 <li><input type="checkbox"><em>Ritviksiddha</em></li>
-                <li><input type="checkbox"><a>Eban</em></li>
-                <li><input type="checkbox"><i>Guan</em></li>
+                <li><input type="checkbox"><i>Eban</i></li>
+                <li><input type="checkbox"><i>Guan</i></li>
                 <li><input type="checkbox"><em>Ibraheem</em></li>
-                <li><input type="checkbox"><i>Sidhant</em></li>
+                <li><input type="checkbox"><i>Sidhant</i></li>
                 <li><input type="checkbox"><em>Jordan</em></li>
-                <li><input type="checkbox"><i>Matthew</em></li>
+                <li><input type="checkbox"><i>Matthew</i></li>
                 <li><input type="checkbox"><em>Sophia</em></li>
             </ul>
         </section>
